fixed big-button on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -206,7 +206,8 @@ hr {
 
 .big-button {
   font-size: 40px;
-  width: 50%;
+  max-width: 60%;
+  min-width: 300px;
   border: 2px solid $brand-color;
   border-radius: 30px;
 
@@ -215,6 +216,15 @@ hr {
     background-color: $brand-color;
     border: 2px solid white;
   }
+
+  @include media-query($on-laptop) {
+      font-size: 35px;
+  }
+
+  @include media-query($on-palm) {
+      font-size: 25px;
+  }
+
 }
 
 .mc-field-group ol, ul {
